syntax = "proto3";

package proto;

option go_package = "tarea2/proto";

service Asignacion {
  rpc EnviarEmergencia (Emergencia) returns (Respuesta);
}

service Monitoreo {
  rpc RecibirActualizacion (ClientRequest) returns (Actualizacion);
}

message Emergencia {
  string nombre = 1;
  int32 latitud = 2;
  int32 longitud = 3;
  int32 magnitud = 4;
}

message Respuesta {
  string mensaje = 1;
}

message ClientRequest {
  // Este mensaje puede estar vacío, actúa como ping
}

message Actualizacion {
  string nombre = 1;
  string estado = 2;
}
